@@ -80,6 +80,10 @@ private:
 
 	virtual
 	void
+	initialize () final override;
+
+	virtual
+	void
 	on_map () final override;
 
 	virtual
