@@ -1,5 +1,12 @@
 2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* History.h:
+	* History.cpp:
+	* HistoryView.h:
+	* HistoryView.cpp: 
+
+2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* main.cpp: 
 
 2014-09-13  Holger Seelig  <holger.seelig@yahoo.de>
